--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     restart: unless-stopped
     volumes:
       - ./src:/app/src
-      - /app/node_modules
+      - ./node_modules:/app/node_modules
     ports:
       - "3000:3000"
