--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "web-vitals": "^2.1.4",
     "@types/node": "^16.11.14",
     "react-scripts": "5.0.1",
