--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "bts",
+  "name": "gpjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^16.11.14",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "fflate": "^0.8.2",
+    "nifti-reader-js": "^0.6.8",
+    "pako": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,12 +26,10 @@
     "eject": "react-scripts eject",
     "docker-dev-up": "docker-compose -f docker-compose.yml up",
     "docker-dev-down": "docker-compose -f docker-compose.yml down"
+
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "root": true
   },
   "browserslist": {
     "production": [
