--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@types/node": "^16.11.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.7",
+    "fflate": "^0.8.2",
     "firebase": "^10.11.1",
+    "nifti-reader-js": "^0.6.8",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
-    "fflate": "^0.8.2",
-    "nifti-reader-js": "^0.6.8",
-    "pako": "^2.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -33,7 +34,6 @@
     "eject": "react-scripts eject",
     "docker-dev-up": "docker-compose -f docker-compose.yml up",
     "docker-dev-down": "docker-compose -f docker-compose.yml down"
-
   },
   "eslintConfig": {
     "root": true
